buildscript {
    repositories {
        maven { url = 'https://maven.minecraftforge.net/' }
        mavenCentral()
    }
    dependencies {
        classpath 'net.minecraftforge.gradle:ForgeGradle:2.3-SNAPSHOT'
    }
}

apply plugin: 'net.minecraftforge.gradle.forge'
apply plugin: 'java'

version = '1.0.0'
group = 'com.wenz.radiomod'
archivesBaseName = 'RadioMod'

sourceCompatibility = targetCompatibility = '1.8'

minecraft {
    version = "1.12.2-14.23.5.2860"
    runDir = "run"
    mappings = "snapshot_20171003"
}

repositories {
    mavenCentral()
}

dependencies {
    compile 'javazoom:jlayer:1.0.1'
}

jar {
    manifest {
        attributes([
            'Specification-Title'     : 'RadioMod',
            'Specification-Version'   : '1',
            'Implementation-Title'    : project.name,
            'Implementation-Version'  : project.version,
            'Implementation-Vendor'   : 'Wenz',
        ])
    }
    // Bundle JLayer into the mod jar
    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
}

processResources {
    inputs.property "version", project.version
    inputs.property "mcversion", project.minecraft.version

    from(sourceSets.main.resources.srcDirs) {
        include 'mcmod.info'
        expand 'version': project.version, 'mcversion': project.minecraft.version
    }
    from(sourceSets.main.resources.srcDirs) {
        exclude 'mcmod.info'
    }
}
